Fix ns page on mobile

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -1339,10 +1339,74 @@ p.example-instructions {
 
   section {
     margin-bottom: 50px;
+  }
+}
 
-    ul li {
-      list-style-type: disc;
+.var-group {
+  clear: both;
+
+  h4 {
+    margin-top: 20px;
+    margin-bottom: 5px;
+    border-bottom: solid #ccc 2px;
+  }
+
+  .dl-row {
+    clear: both;
+    padding: 3px 0;
+    &:hover {
+      background-color: #eee;
     }
+  }
+
+  dl {
+    font-size: 13px;
+  }
+
+  dt {
+    min-width: 150px;
+    text-align: right;
+    margin-right: 10px;
+    //font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
+    font-weight: normal;
+  }
+
+  dd {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 580px;
+    white-space: nowrap;
+
+    @media(max-width: 1199px) {
+      width: 460px;
+    }
+
+    @media(max-width: 991px) {
+      width: 400px;
+    }
+  }
+
+  @media(max-width: 767px) {
+    .dl-row {
+      padding: 0;
+    }
+
+    dt {
+      display: block;
+      text-align: left;
+      padding-top: 10px;
+    }
+
+    dd {
+      display: block;
+      border-bottom: solid #ddd 1px;
+      width: 100%;
+      padding-bottom: 10px;
+    }
+  }
+
+  .no-doc {
+    color: #aaa;
   }
 }
 
@@ -1362,7 +1426,7 @@ p.example-instructions {
   }
 
   .doc {
-    width: 450px;
+    //width: 450px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
